<resources>
    <string name="app_name">UVa Bucket List</string>
    <string name="action_settings">Settings</string>
    <string name="list_item_title_hint">Please enter a title for your list item.</string>
    <string name="list_item_title_label">Title</string>
    <string name="list_item_description_label">Description</string>
    <string name="list_item_completed_label">Completed</string>
    <string name="list_item_description_hint">Please enter a short description.</string>
</resources>
