<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_item_title_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/list_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_item_title_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_item_description_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/list_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_item_description_hint"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_completed"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/list_item_completed_label"
        />

</LinearLayout>